// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinResult renders when spin result is 0 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 00 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 1 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    1
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 2 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 3 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    3
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 4 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 5 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    5
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 6 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 7 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    7
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 8 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 9 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    9
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 10 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 11 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    11
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 12 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 13 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    13
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 14 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 15 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    15
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 16 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 17 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    17
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 18 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 19 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    19
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 20 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 21 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    21
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 22 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 23 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    23
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 24 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 25 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    25
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 26 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 27 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#d94848",
      }
    }
  >
    27
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 28 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 29 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    29
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 30 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 31 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    31
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 32 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 33 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    33
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 34 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 35 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "#222222",
      }
    }
  >
    35
  </div>
</div>
`;

exports[`SpinResult renders when spin result is 36 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is not defined (null) 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;

exports[`SpinResult renders when spin result is not defined (undefined) 1`] = `
<div
  className="SpinResult-component"
>
  <div
    className="spin-result-label"
    style={
      Object {
        "backgroundColor": "inherit",
      }
    }
  >
    -
  </div>
</div>
`;
